[gd_scene load_steps=11 format=3 uid="uid://bpdidtl6tvpva"]

[ext_resource type="Script" uid="uid://bji2reaby4b1p" path="res://systems/special_attack/special_attack.gd" id="1_yeiqa"]
[ext_resource type="Shader" uid="uid://bklocqa7od7hy" path="res://systems/special_attack/stomp_wave.gdshader" id="2_ppanh"]

[sub_resource type="Animation" id="Animation_if00e"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaveMesh:mesh:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaveMesh:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.2, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaveMesh:surface_material_override/0:shader_parameter/color2:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaveMesh:surface_material_override/0:shader_parameter/fresnel_sharpness")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2.4, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_ppanh"]
resource_name = "pulse"
length = 0.6
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaveMesh:surface_material_override/0:shader_parameter/color2:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.8235294, -0.1, 0, 0, -0.69333637, 0, -0.17, 0.0030248687, 0, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaveMesh:surface_material_override/0:shader_parameter/fresnel_sharpness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.4, -0.1, 0, 0, 4.6612267, 12, -0.039298102, -0.0080833435, 0, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaveMesh:mesh:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 24.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaveMesh:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.2, 48.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_if00e"]
_data = {
&"RESET": SubResource("Animation_if00e"),
&"pulse": SubResource("Animation_ppanh")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_th5wm"]
radius = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_th5wm"]
transparency = 1
albedo_color = Color(0.89, 0.23139998, 0.87902313, 0.3137255)

[sub_resource type="SphereMesh" id="SphereMesh_okvm0"]
material = SubResource("StandardMaterial3D_th5wm")
radius = 4.0
height = 8.0

[sub_resource type="SphereMesh" id="SphereMesh_ppanh"]
radius = 0.1
height = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6bpv3"]
render_priority = 0
shader = ExtResource("2_ppanh")
shader_parameter/color1 = Color(0.9666667, 0, 1, 1)
shader_parameter/color2 = Color(0.98766667, 0.63, 1, 0)
shader_parameter/threshold = 0.2
shader_parameter/fresnel_sharpness = 2.4

[node name="SpecialAttack" type="Area3D"]
collision_layer = 16
collision_mask = 4
script = ExtResource("1_yeiqa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_if00e")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_th5wm")
debug_fill = false

[node name="TargettingMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_okvm0")

[node name="WaveMesh" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_ppanh")
surface_material_override/0 = SubResource("ShaderMaterial_6bpv3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
